--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ DB_DSN=host=${DATABASE_HOST} user=${DATABASE_USER} password=${DATABASE_PASSWORD}
 GIN_MODE=debug # set to 'release' in production
 BASIC_AUTH_USER=auth_user # this should be a random set of chars and symbols in production
 BASIC_AUTH_PASSWORD=auth_pass # this should be a random set of chars and symbols in production
-
-
+JWT_SECRET=12345 # this should be a random set of chars and symbols in production
+JWT_EXPIRY=60 # in minutes
