--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ BASIC_AUTH_USER=auth_user # this should be a random set of chars and symbols in 
 BASIC_AUTH_PASSWORD=auth_pass # this should be a random set of chars and symbols in production
 JWT_SECRET=12345 # this should be a random set of chars and symbols in production
 JWT_EXPIRY=60 # in minutes
+LOG_FILE_NAME=app.log
