--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DATABASE_USER=postgres
-DATABASE_PASSWORD=nagarro
-DATABASE_NAME=mtn
+DATABASE_USER=ashiq
+DATABASE_PASSWORD=postgres
+DATABASE_NAME=testapp
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DB_DSN=host=${DATABASE_HOST} user=${DATABASE_USER} password=${DATABASE_PASSWORD} dbname=${DATABASE_NAME} port=${DATABASE_PORT} sslmode=disable
@@ -10,3 +10,6 @@ BASIC_AUTH_PASSWORD=auth_pass # this should be a random set of chars and symbols
 JWT_SECRET=12345 # this should be a random set of chars and symbols in production
 JWT_EXPIRY=60 # in minutes
 LOG_FILE_NAME=app.log
+ELASTIC_APM_SERVICE_NAME=userservice
+ELASTIC_APM_SERVER_URL=http://localhost:8200
+ELASTIC_APM_ENVIRONMENT="development"
