--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,7 @@
     "configurations": [
         {
             "name": "UserManagementService",
+            "output": "UserManagementService",
             "type": "go",
             "request": "launch",
             "mode": "debug",
