Add docker file

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ BASIC_AUTH_PASSWORD=auth_pass # this should be a random set of chars and symbols
 JWT_SECRET=12345 # this should be a random set of chars and symbols in production
 JWT_EXPIRY=60 # in minutes
 LOG_FILE_NAME=app.log
+ELASTIC_APM_SERVER_URL=http://localhost:8200
+ELASTIC_APM_SECRET_TOKEN=
+ELASTIC_APM_SERVICE_NAME=UserManagementService
