--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DATABASE_USER=ashiq
-DATABASE_PASSWORD=postgres
-DATABASE_NAME=testapp
+DATABASE_USER=postgres
+DATABASE_PASSWORD=nagarro
+DATABASE_NAME=mtn
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DB_DSN=host=${DATABASE_HOST} user=${DATABASE_USER} password=${DATABASE_PASSWORD} dbname=${DATABASE_NAME} port=${DATABASE_PORT} sslmode=disable
