--- a/.env
+++ b/.env
@@ -3,10 +3,11 @@ DATABASE_PASSWORD=nagarro
 DATABASE_NAME=mtn
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DB_DSN=host=${DATABASE_HOST} user=${DATABASE_USER} password=${DATABASE_PASSWORD} dbname=${DATABASE_NAME} port=${DATABASE_PORT} sslmode=disable
+DATABASE_DSN=host=${DATABASE_HOST} user=${DATABASE_USER} password=${DATABASE_PASSWORD} dbname=${DATABASE_NAME} port=${DATABASE_PORT} sslmode=disable
 GIN_MODE=debug # set to 'release' in production
+SERVICE_PORT=8080 # service port
 BASIC_AUTH_USER=auth_user # this should be a random set of chars and symbols in production
 BASIC_AUTH_PASSWORD=auth_pass # this should be a random set of chars and symbols in production
-JWT_SECRET=12345 # this should be a random set of chars and symbols in production
-JWT_EXPIRY=60 # in minutes
-LOG_FILE_NAME=app.log
+JWT_SECRET_KEY=12345_Satyam # this should be a random set of chars and symbols in production
+JWT_EXPIRATION_TIME=60 # in minutes
+LOG_FILE_PATH=./log
