--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,12 @@
 GIN_MODE=debug
-DATABASE_USER=postgres
-DATABASE_PASSWORD=nagarro
-DATABASE_NAME=mtn
+DATABASE_NAME=test_db
+DATABASE_USER=test_user
+DATABASE_PASSWORD=********
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_DSN=host=${DATABASE_HOST} user=${DATABASE_USER} password=${DATABASE_PASSWORD} dbname=${DATABASE_NAME} port=${DATABASE_PORT} sslmode=disable
 SERVICE_PORT=8080
 BASIC_AUTH_USER=auth_user
-BASIC_AUTH_PASSWORD=auth_pass
-JWT_SECRET_KEY=12345_Satyam
-JWT_EXPIRATION_TIME=60
+BASIC_AUTH_PASSWORD=********
+JWT_SECRET_KEY=********
+JWT_EXPIRATION_TIME=60  
 LOG_FILE_PATH=./log
